collection and front page

--- a/app/collection.html
+++ b/app/collection.html
@@ -329,7 +329,9 @@
 <!--  Footer END -->
 
 <div class="mobile-menu__content">
-
+    <div id="menu-close" class="menu-close">
+        <img src="images/close-icone.svg" alt="close">
+    </div>
     <div class="mobile-menu__content-header">
         <div class="mobile-menu__content-header_login">
             <a class="user_login" href="#">Войти <img src="images/login_icon.svg" alt="enter"></a>
