--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 
                 <nav class="header-bottom__content-nav">
                     <ul class="header-bottom__nav-list">
-                        <li><a href="#">Коллекции</a></li>
+                        <li><a class="active" href="#">Коллекции</a></li>
                         <li><a href="#">Проекты</a></li>
                         <li><a href="#">О компании</a></li>
                         <li><a href="#">Контакты</a></li>
@@ -372,7 +372,9 @@
 <!--  Footer END -->
 
 <div class="mobile-menu__content">
-
+    <div id="menu-close" class="menu-close">
+        <img src="images/close-icone.svg" alt="close">
+    </div>
     <div class="mobile-menu__content-header">
         <div class="mobile-menu__content-header_login">
             <a class="user_login" href="#">Войти <img src="images/login_icon.svg" alt="enter"></a>
