--- a/app/profile.html
+++ b/app/profile.html
@@ -14,10 +14,7 @@
 
 </head>
 
-<body>
-
-<div class="wrapper">
-
+<body style="background-image: url(/images/bg_corner.jpg);">
 
     <header class="header">
 
@@ -291,8 +288,6 @@
     </div>
     
   </div>
-
-</div>
 <ul class="social">
     <li><a href="#"><img src="images/facebook.svg" alt="facebook"></a></li>
     <li><a href="#"><img src="images/instagram.svg" alt="instagram"></a></li>
