--- a/app/project-page.html
+++ b/app/project-page.html
@@ -144,14 +144,14 @@
     <div class="section-inner">
 
         <div class="single-project__image">
-            <img src="/images/project_page-top.jpg" alt="project">
+            <img src="images/project_page-top.jpg" alt="project">
         </div>
 
         <div class="single-project__home">
             <div class="single-project__home-left">
                 <div class="single-project__home-left_content">
                     <h2>Проект дома на Стравиленской</h2>
-                    <address><img src="/images/adress.svg" alt="adress"> г. Москва, ул. Московская 13/78</address> 
+                    <address><img src="images/adress.svg" alt="adress"> г. Москва, ул. Московская 13/78</address> 
                 </div>
             </div>
             <div class="single-project__home-right">
@@ -231,9 +231,16 @@
 
             <div class="footer-meta">
                 <div class="footer-meta__contact">
-                    <img class="logo" src="/images/main_logo.svg" alt="footer_logo">
+                    <img class="logo" src="images/main_logo.svg" alt="footer_logo">
                     <a class="phone" href="tel:+79163819783"><img src="images/phone.svg" alt="phone">+7 916 381-97-83</a>
                     <a class="mail" href="mailto:ucompany@gmail.com"><img src="images/e_mail.svg" alt="e-mail">ucompany@gmail.com</a>
+                </div>
+                <div class="footer-meta__mobile-description">
+                    <ul>
+                        <li>ООО «АЛЕЙРА-КЕРАМИКА»</li>
+                        <li>115114, г. Москва, проезд 2-й Павелецкий, дом 5,</li>
+                        <li>строение 1, эт/помещ. 5/28</li>
+                    </ul>
                 </div>
                 <a class="main-btn in-footer" href="#">Стать партнером</a>
             </div>
@@ -260,6 +267,9 @@
 <!--  Footer END -->
 
 <div class="mobile-menu__content">
+    <div id="menu-close" class="menu-close">
+        <img src="images/close-icone.svg" alt="close">
+    </div>
 
     <div class="mobile-menu__content-header">
         <div class="mobile-menu__content-header_login">
