--- a/app/projects.html
+++ b/app/projects.html
@@ -333,49 +333,60 @@
 
 <!--  Upload Section END -->
 
-   <!--  Footer -->
+    <!--  Footer -->
 
-   <footer class="footer" style="background-image: url(images/footer_bg.png);">
-    <section class="section-inner">
+      <footer class="footer" style="background-image: url(images/footer_bg.png);">
+        <section class="section-inner">
 
-            <ul class="footer-menu">
-                <li><a href="#">Коллекции</a></li>
-                <li><a href="#">Проекты</a></li>
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
+                <ul class="footer-menu">
+                    <li><a href="#">Коллекции</a></li>
+                    <li><a href="#">Проекты</a></li>
+                    <li><a href="#">О компании</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
 
-            <div class="footer-meta">
-                <div class="footer-meta__contact">
-                    <img class="logo" src="/images/main_logo.svg" alt="footer_logo">
-                    <a class="phone" href="tel:+79163819783"><img src="images/phone.svg" alt="phone">+7 916 381-97-83</a>
-                    <a class="mail" href="mailto:ucompany@gmail.com"><img src="images/e_mail.svg" alt="e-mail">ucompany@gmail.com</a>
+                <div class="footer-meta">
+                    <div class="footer-meta__contact">
+                        <img class="logo" src="images/main_logo.svg" alt="footer_logo">
+                        <a class="phone" href="tel:+79163819783"><img src="images/phone.svg" alt="phone">+7 916 381-97-83</a>
+                        <a class="mail" href="mailto:ucompany@gmail.com"><img src="images/e_mail.svg" alt="e-mail">ucompany@gmail.com</a>
+                    </div>
+                    <div class="footer-meta__mobile-description">
+                        <ul>
+                            <li>ООО «АЛЕЙРА-КЕРАМИКА»</li>
+                            <li>115114, г. Москва, проезд 2-й Павелецкий, дом 5,</li>
+                            <li>строение 1, эт/помещ. 5/28</li>
+                        </ul>
+                    </div>
+                    <a class="main-btn in-footer" href="#">Стать партнером</a>
                 </div>
-                <a class="main-btn in-footer" href="#">Стать партнером</a>
+
+                
+        </section>
+        <div class="horizont-line"></div>
+        <div class="footer-copiright">
+            <div class="footer-copiright__adress">
+                <ul>
+                    <li>ООО «АЛЕЙРА-КЕРАМИКА»</li>
+                    <li>115114, г. Москва, проезд 2-й Павелецкий, дом 5,</li>
+                    <li>строение 1, эт/помещ. 5/28</li>
+                </ul>
             </div>
-
-            
-    </section>
-    <div class="horizont-line"></div>
-    <div class="footer-copiright">
-        <div class="footer-copiright__adress">
-            <ul>
-                <li>ООО «АЛЕЙРА-КЕРАМИКА»</li>
-                <li>115114, г. Москва, проезд 2-й Павелецкий, дом 5,</li>
-                <li>строение 1, эт/помещ. 5/28</li>
-            </ul>
+            <div class="footer-copiright__content">Все права защищены 2021</div>
+            <div class="footer-copiright__privacy">
+                <a class="privacy" href="#">Политика конфидициальности</a>
+                <a class="convention" href="#">Пользовательское соглашение</a>
+            </div>
         </div>
-        <div class="footer-copiright__content">Все права защищены 2021</div>
-        <div class="footer-copiright__privacy">
-            <a class="privacy" href="#">Политика конфидициальности</a>
-            <a class="convention" href="#">Пользовательское соглашение</a>
-        </div>
-    </div>
 
-</footer>
+    </footer>
 <!--  Footer END -->
 
 <div class="mobile-menu__content">
+
+    <div id="menu-close" class="menu-close">
+        <img src="images/close-icone.svg" alt="close">
+    </div>
 
   <div class="mobile-menu__content-header">
       <div class="mobile-menu__content-header_login">
