project page and regiaster formregister form

--- a/app/profile.html
+++ b/app/profile.html
@@ -64,7 +64,7 @@
                         <a href="#"><i class="far fa-heart"></i></a>
                     </div>
                     <div class="header-bottom__content-right_login">
-                        <a class="belogin" href="#">Войти<img src="images/login_icon.svg" alt="enter"></a>
+                        <a class="belogin" href="#">Выйти<img src="images/login_icon.svg" alt="enter"></a>
                     </div>
                 </div>
 
