--- a/app/inner-collection.html
+++ b/app/inner-collection.html
@@ -428,7 +428,7 @@
 
     <div class="mobile-menu__content-header">
         <div class="mobile-menu__content-header_login">
-            <a class="user_login" href="#">Войти <img src="images/login_icon.svg" alt="enter"></a>
+            <span id="register-mobile" class="belogin" >Войти<img src="images/login_icon.svg" alt="enter"></span>
         </div>
         <div class="mobile-menu__content-header_language">
             <div class="header-top__right-language"><img src="images/ru_flag.svg" alt="flag"> Рус</div>
