--- a/app/profile.html
+++ b/app/profile.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body style="background-image: url(/images/bg_corner.jpg);">
+<body style="background-image: url(images//bg_corner.jpg);">
 
     <header class="header">
 
@@ -221,7 +221,7 @@
 
                 <div class="footer-meta">
                     <div class="footer-meta__contact">
-                        <img class="logo" src="/images/main_logo.svg" alt="footer_logo">
+                        <img class="logo" src="images/main_logo.svg" alt="footer_logo">
                         <a class="phone" href="tel:+79163819783"><img src="images/phone.svg" alt="phone">+7 916 381-97-83</a>
                         <a class="mail" href="mailto:ucompany@gmail.com"><img src="images/e_mail.svg" alt="e-mail">ucompany@gmail.com</a>
                     </div>
@@ -252,7 +252,7 @@
 
     <div class="mobile-menu__content-header">
         <div class="mobile-menu__content-header_login">
-            <a class="user_login" href="#">Войти <img src="images/login_icon.svg" alt="enter"></a>
+            <span id="register-mobile" class="belogin" >Войти<img src="images/login_icon.svg" alt="enter"></span>
         </div>
         <div class="mobile-menu__content-header_language">
             <div class="header-top__right-language"><img src="images/ru_flag.svg" alt="flag"> Рус</div>
