add mobile filter

--- a/app/inner-collection.html
+++ b/app/inner-collection.html
@@ -144,6 +144,16 @@
             <a class="main-btn" href="#">Все коллекции</a>
         </div>
 
+        <!-- Mobile Filter -->
+        <div class="collection-mobile-filter">
+            <div id="open-mobile-filter" class="collection-mobile-filter__header">
+                <div class="collection-mobile-filter__header-title">Фильтр</div>
+                <div id="mobchevron" class="collection-mobile-filter__header-chevron"></div>
+            </div>
+        </div>
+        <!-- Mobile Filter END-->
+
+        <!-- Descktop Filter -->
         <div class="collection-inner__filter">
              <form id="filter" class="filter" action="" method="POST">
                 <div class="filter-guts">
@@ -246,7 +256,7 @@
 
                     <!-- filter surface type -->
 
-                    
+
 
                     <!-- filter surface type -->
 
@@ -257,7 +267,7 @@
                 </div>
              </form>
         </div>
-
+        <!-- Descktop Filter END-->
         <div class="collection-inner__content">
 
             <div class="collection-inner__content-wrapper">
